--- a/.github/workflows/radar-stats.yml
+++ b/.github/workflows/radar-stats.yml
@@ -2,7 +2,7 @@ name: Generate Radar Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # run daily at midnight (UTC)
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate Radar-style stats SVG
-        uses: cicirello/user-statistician@v2
+        uses: cicirello/user-statistician@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           image_file: radar-stats.svg
