--- a/.github/workflows/radar-stats.yml
+++ b/.github/workflows/radar-stats.yml
@@ -15,16 +15,10 @@ jobs:
 
       - name: Generate Radar-style stats SVG
         uses: cicirello/user-statistician@v1
+        env:
+          GH_TOKEN: ${{ github.token }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          image_file: radar-stats.svg
-          stats_color: "00FF00"
-          contributions_color: "007700"
-          language_color: "00AA00"
-
-      - name: Commit and push SVG
-        uses: EndBug/add-and-commit@v9
-        with:
-          author_name: "stats-bot"
-          author_email: "stats-bot@users.noreply.github.com"
-          message: "Update radar stats SVG"
+          image-file: radar-stats.svg
+          commit-and-push: true
+          commit-message: "Update radar stats SVG"
+          colors: "green"
