--- a/.github/workflows/radar-stats.yml
+++ b/.github/workflows/radar-stats.yml
@@ -17,6 +17,7 @@ jobs:
         uses: cicirello/user-statistician@v1
         env:
           GH_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
         with:
           image-file: radar-stats.svg
           commit-and-push: true
