--- a/.github/workflows/soc-radar.yml
+++ b/.github/workflows/soc-radar.yml
@@ -2,7 +2,7 @@ name: Update SOC Radar
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # run daily at midnight
+    - cron: "0 0 * * *"  # daily at midnight
   workflow_dispatch:      # manual trigger
 
 jobs:
@@ -15,11 +15,11 @@ jobs:
 
       - name: Generate SOC radar SVG
         uses: cicirello/user-statistician@v1
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # <-- required for push
         with:
           image-file: soc-radar.svg
           include-title: false
           colors: "00FF00,0077FF,00AAFF"
           commit-and-push: true
           commit-message: "Update SOC Radar SVG"
-          # Pass the token
-          github_token: ${{ secrets.GITHUB_TOKEN }}
