--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,9 +1,8 @@
 name: Generate GitHub Stats
 
-# Trigger the workflow on push to main branch and hourly
 on:
   schedule:
-    - cron: '0 * * * *'   # runs every hour
+    - cron: '0 * * * *'   # every hour
   push:
     branches: [ main ]
 
@@ -11,20 +10,18 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      # Checkout your repository
       - uses: actions/checkout@v3
 
-      # Generate stats SVG
-      - name: Generate SOC & Automation Stats
+      - name: Generate GitHub Stats SVG
         uses: cicirello/user-statistician@v1
         with:
-          image-file: "github-stats.svg"        # output filename
+          image-file: "github-stats.svg"
           include-title: true
           custom-title: "SOC | IR | Automation | Data"
-          colors: "00FF00,0077FF,00AAFF"       # green/blue shades
+          colors: "00FF00,0077FF,00AAFF"
           animated-language-chart: true
           fail-on-error: true
           commit-and-push: true
           commit-message: "Update GitHub stats SVG"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # automatically available in GitHub Actions
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
