--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -1,16 +1,17 @@
 name: Generate GitHub Stats
 
 on:
-  schedule:
-    - cron: '0 * * * *'   # every hour
   push:
     branches: [ main ]
+  schedule:
+    - cron: '0 * * * *'  # Every hour
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Generate GitHub Stats SVG
         uses: cicirello/user-statistician@v1
@@ -24,4 +25,4 @@ jobs:
           commit-and-push: true
           commit-message: "Update GitHub stats SVG"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
