--- a/assets/scripts/.github/workflows/update-blue-team-radar.yml
+++ b/assets/scripts/.github/workflows/update-blue-team-radar.yml
@@ -1,1 +1,32 @@
+name: Update Blue Team Radar
 
+on:
+  schedule:
+    - cron: "59 23 * * 0"   # Weekly Sunday
+  workflow_dispatch:
+
+jobs:
+  generate:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Generate radar
+        run: python scripts/generate_radar.py
+
+      - name: Commit SVG
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions@github.com"
+          git add assets/blue-team-radar.svg
+          git commit -m "Update Blue Team capability radar" || exit 0
+          git push
