--- a/.github/workflows/update-readme-gif.yml
+++ b/.github/workflows/update-readme-gif.yml
@@ -25,9 +25,13 @@ jobs:
         run: python generate_gif.py
 
       - name: Commit GIF
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add generated.gif
-          git commit -m "Auto-update SOC radar GIF" || echo "No changes"
-          git push
+  run: |
+    git config user.name "github-actions[bot]"
+    git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+    git pull --rebase origin main
+    git add generated.gif
+    git commit -m "Auto-update SOC radar GIF" || echo "No changes"
+    git push origin main
+
+
