--- a/.github/workflows/update-readme-gif.yml
+++ b/.github/workflows/update-readme-gif.yml
@@ -28,9 +28,12 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git stash --include-untracked
           git pull --rebase origin main
+          git stash pop || true
+
           git add generated.gif
           git commit -m "Auto-update SOC radar GIF" || echo "No changes"
           git push origin main
-
-
+ 
