--- a/.github/workflows/update-readme-svg.yml
+++ b/.github/workflows/update-readme-svg.yml
@@ -1,1 +1,36 @@
+name: Update Intel Dashboard
 
+on:
+  schedule:
+    - cron: "0 * * * *"  # every hour
+  workflow_dispatch:
+    # allows manual trigger
+
+jobs:
+  update-svg:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pillow  # or other libraries if needed
+
+      - name: Generate SVG Dashboard
+        run: python scripts/generate_svg_intel_dashboard.py
+
+      - name: Commit updated SVG
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add intel_dashboard.svg
+          git commit -m "Auto-update Cyber & Intelligence Operations Board" || echo "No changes to commit"
+          git push
