--- a/.github/workflows/update-readme-svg.yml
+++ b/.github/workflows/update-readme-svg.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add intel_dashboard.svg
+          git add assets/intel_dashboard.svg
           git commit -m "Auto-update Cyber & Intelligence Operations Board" || echo "No changes to commit"
           git push
