--- a/.github/workflows/update-readme-svg.yml
+++ b/.github/workflows/update-readme-svg.yml
@@ -1,32 +1,27 @@
-name: Update Intel Dashboard
+name: Update README SVG
 
 on:
   schedule:
     - cron: "0 * * * *"  # every hour
   workflow_dispatch:
-    # allows manual trigger
 
 jobs:
-  update-svg:
+  build-svg:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pillow  # or other libraries if needed
+        run: python -m pip install --upgrade pip
 
       - name: Generate SVG Dashboard
         run: python scripts/generate_svg_intel_dashboard.py
-
 
       - name: Commit updated SVG
         run: |
