--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,7 +2,7 @@ name: Generate GitHub Stats
 
 on:
   schedule:
-    - cron: "0 */12 * * *"   # updates every 12 hours
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
@@ -13,31 +13,31 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # --- GitHub Stats Card ---
-      - name: Generate GitHub Stats SVG
+      # --- GitHub Stats ---
+      - name: GitHub Stats
         run: |
-          curl -o assets/github-stats.svg "https://github-readme-stats.vercel.app/api?username=DRA3V50&show_icons=true&theme=tokyonight&hide_border=true"
+          curl -f -o assets/github-stats.svg "https://github-readme-stats.vercel.app/api?username=DRA3V50&show_icons=true&theme=tokyonight&hide_border=true" || echo "Stats failed"
 
-      # --- Top Languages Card ---
-      - name: Generate Top Languages SVG
+      # --- Top Languages ---
+      - name: Top Languages
         run: |
-          curl -o assets/top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=DRA3V50&layout=compact&theme=tokyonight&hide_border=true"
+          curl -f -o assets/top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=DRA3V50&layout=compact&theme=tokyonight&hide_border=true" || echo "Langs failed"
 
       # --- Streak Stats ---
-      - name: Generate Streak Stats SVG
+      - name: Streak Stats
         run: |
-          curl -o assets/streak.svg "https://github-readme-streak-stats.herokuapp.com/?user=DRA3V50&theme=tokyonight&hide_border=true"
+          curl -f -o assets/streak.svg "https://github-readme-streak-stats.herokuapp.com/?user=DRA3V50&theme=tokyonight&hide_border=true" || echo "Streak failed"
 
       # --- Trophies ---
-      - name: Generate Trophies SVG
+      - name: Trophies
         run: |
-          curl -o assets/trophies.svg "https://github-profile-trophy.vercel.app/?username=DRA3V50&theme=tokyonight&no-frame=true"
+          curl -f -o assets/trophies.svg "https://github-profile-trophy.vercel.app/?username=DRA3V50&theme=tokyonight&no-frame=true" || echo "Trophies failed"
 
-      # --- Commit the updated SVGs ---
-      - name: Commit and push changes
+      # --- Commit SVGs ---
+      - name: Commit and push
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add assets/*.svg
-          git commit -m "Update stats SVGs" || echo "No changes to commit"
+          git commit -m "Update stats SVGs" || echo "No changes"
           git push
