--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -9,32 +9,36 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Generate metrics
+        uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           user: DRA3V50
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: header, activity
           config_timezone: America/Detroit
 
-          # Plugins
           plugin_languages: yes
           plugin_languages_sections: most-used
-          plugin_languages_details: bytes-size, percentage
-          plugin_languages_limit: 8
-
-          plugin_stars: yes
-          plugin_stars_limit: 4
+          plugin_languages_details: percentage
+          plugin_languages_limit: 6
 
           plugin_achievements: yes
-          plugin_achievements_threshold: C
-          plugin_achievements_secrets: yes
           plugin_achievements_display: compact
+          plugin_achievements_threshold: C
 
           plugin_trophies: yes
           plugin_trophies_theme: onedark
 
-          plugin_followup: yes
-          plugin_followup_sections: repositories
+      - name: Save metrics.svg
+        run: |
+          mkdir -p assets
+          mv metrics.svg assets/metrics.svg
 
-          plugin_lines: yes
+      - name: Commit and push
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add assets/metrics.svg
+          git commit -m "Update metrics.svg" || echo "No changes"
+          git push
