--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,4 +1,4 @@
-name: Generate GitHub Stats SVGs
+name: GitHub Stats (Local SVG)
 
 on:
   schedule:
@@ -8,28 +8,24 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Generate Stats SVG
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          user: DRA3V50
 
-      - name: Install SVG converter
-        run: sudo apt-get install librsvg2-bin
+          # Only the essentials
+          template: classic
+          base: header, activity
+          config_timezone: America/Detroit
 
-      # GitHub Stats
-      - name: Download GitHub Stats SVG
-        run: |
-          curl -f -o assets/github-stats.svg "https://github-readme-stats.vercel.app/api?username=DRA3V50&show_icons=true&theme=tokyonight&hide_border=true"
+          # Languages (local analysis, no external API)
+          plugin_languages: yes
+          plugin_languages_sections: most-used
+          plugin_languages_details: percentage
+          plugin_languages_limit: 6
 
-      # Top Languages
-      - name: Download Top Languages SVG
-        run: |
-          curl -f -o assets/top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=DRA3V50&layout=compact&theme=tokyonight&hide_border=true"
-
-      - name: Commit and push
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add assets/github-stats.svg assets/top-langs.svg
-          git commit -m "Update GitHub stats SVGs" || echo "No changes"
-          git push
+          # Output
+          output_action: commit
+          output_path: assets/github-stats.svg
