--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -10,37 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Clone stats generator
-        run: |
-          rm -rf gh-stats
-          git clone https://github.com/anuraghazra/github-readme-stats gh-stats
-
-      - name: Install dependencies
-        run: |
-          cd gh-stats
-          npm install
-
-      - name: Build stats locally
-        run: |
-          cd gh-stats
-          npm run build
-
       - name: Generate stats SVG
-        run: |
-          node gh-stats/api/index.js \
-            username=DRA3V50 \
-            show_icons=true \
-            hide_border=true \
-            theme=tokyonight \
-            > assets/github-stats.svg
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          user: DRA3V50
 
-      - name: Commit and push
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add assets/github-stats.svg
-          git commit -m "Update stats" || echo "No changes"
-          git push
+          # Only show the simple stats card
+          template: classic
+          base: header, activity
+          config_timezone: America/Detroit
+
+          # Output
+          output_action: commit
+          output_path: assets/github-stats.svg
