--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -1,38 +1,31 @@
-name: Generate GitHub Stats
+name: Local GitHub Stats
 
 on:
   schedule:
-    - cron: "0 */12 * * *"   # updates every 12 hours
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
-  build:
+  stats:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Generate Stats
+        uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          user: DRA3V50
 
-      # --- GitHub Stats Card ---
-      - name: Generate GitHub Stats SVG
-        run: |
-          curl -f -o assets/github-stats.svg "https://github-readme-stats.vercel.app/api?username=DRA3V50&show_icons=true&theme=tokyonight&hide_border=true"
+          template: classic
+          base: header, activity
+          config_timezone: America/Detroit
 
-      # --- Top Languages Card ---
-      - name: Generate Top Languages SVG
-        run: |
-          curl -f -o assets/top-langs.svg "https://github-readme-stats.vercel.app/api/top-langs/?username=DRA3V50&layout=compact&theme=tokyonight&hide_border=true"
+          plugin_languages: yes
+          plugin_languages_sections: most-used
+          plugin_languages_details: percentage
+          plugin_languages_limit: 6
 
-      # --- Streak Stats ---
-      - name: Generate Streak Stats SVG
-        run: |
-          curl -f -o assets/streak.svg "https://github-readme-streak-stats.herokuapp.com/?user=DRA3V50&theme=tokyonight&hide_border=true"
+          plugin_streak: yes
 
-      # --- Commit the updated SVGs ---
-      - name: Commit and push changes
-        run: |
-          git config --global user.name "github-actions
-          git config --global user.email "github-actions@github.com"
-          git add assets/*.svg
-          git commit -m "Update stats SVGs" || echo "No changes to commit"
-          git push
+          output_action: commit
+          output_path: assets/github-stats.svg
