--- a/.github/workflows/update-mitre.yml
+++ b/.github/workflows/update-mitre.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -17,14 +18,19 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Build SVG
+      - name: Install dependencies
+        run: pip install cairosvg
+
+      - name: Build MITRE SVG
         run: python scripts/build_mitre_svg.py
 
-      - name: Commit SVG
+      - name: Render MITRE PNG
+        run: python scripts/render_mitre_png.py
+
+      - name: Commit updated artifacts
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add assets/mitre.svg
-          git commit -m "Update MITRE coverage SVG" || echo "No changes"
+          git add assets/mitre.svg assets/mitre.png
+          git commit -m "Update MITRE coverage visualization" || echo "No changes"
           git push
-
