--- a/.github/workflows/update-mitre.yml
+++ b/.github/workflows/update-mitre.yml
@@ -34,10 +34,11 @@ jobs:
           ls -lah assets
           test -f assets/mitre.png
 
-      - name: Commit and push updates
+      - name: Commit assets
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add assets/mitre.svg assets/mitre.png
-          git commit -m "Auto-update MITRE coverage visuals" || echo "No changes to commit"
+          git commit -m "Update MITRE coverage visuals" || echo "No changes"
           git push
+
