Update and rename update-threat-matrix.yml to update-incident-flow.yml

--- a/.github/workflows/update-incident-flow.yml
+++ b/.github/workflows/update-incident-flow.yml
@@ -1,4 +1,4 @@
-name: Update Threat Matrix GIF
+name: Update Incident Lifecycle SVG
 
 on:
   push:
@@ -15,16 +15,13 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install dependencies
-        run: pip install pillow cairosvg imageio
-
-      - name: Build Threat Matrix GIF
-        run: python scripts/build_threat_matrix_gif.py
+      - name: Build Incident Flow SVG
+        run: python scripts/build_incident_flow_svg.py
 
       - name: Commit assets
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add assets/threat_matrix.gif
-          git commit -m "Update Threat Matrix GIF" || echo "No changes"
+          git add assets/incident_flow.svg
+          git commit -m "Update Incident Flow SVG" || echo "No changes"
           git push
