--- a/.github/workflows/update-alert-flow.yml
+++ b/.github/workflows/update-alert-flow.yml
@@ -1,4 +1,4 @@
-name: Update MITRE Bar Chart GIF
+name: Update Alert Flow SVG
 
 on:
   push:
@@ -14,14 +14,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
-      - name: Install dependencies
-        run: pip install pillow imageio
-      - name: Build MITRE Bar Chart GIF
-        run: python scripts/build_mitre_bar_chart.py
+      - name: Build Alert Flow SVG
+        run: python scripts/build_alert_flow_svg.py
       - name: Commit assets
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add assets/mitre_bar_chart.gif
-          git commit -m "Update MITRE Bar Chart GIF" || echo "No changes"
+          git add assets/alert_flow.svg
+          git commit -m "Update Alert Flow SVG" || echo "No changes"
           git push
