--- a/.github/workflows/mitre_dashboard.yml
+++ b/.github/workflows/mitre_dashboard.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: List repo files for debugging
+        run: ls -R
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -23,5 +25,5 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git add assets/mitre_dashboard.svg
-          git commit -m "Update MITRE Dashboard SVG" || echo "No changes to commit"
+          git commit -m "Update MITRE Dashboard SVG" || echo "No changes"
           git push
