--- a/.github/workflows/mitre_dashboard.yml
+++ b/.github/workflows/mitre_dashboard.yml
@@ -2,11 +2,8 @@ name: Generate MITRE Dashboard
 
 on:
   workflow_dispatch:
-  push:
-    paths:
-      - "scripts/generate_mitre_dashboard.py"
-      - ".github/workflows/mitre_dashboard.yml"
-      - "requirements.txt"
+  schedule:
+    - cron: "0 */6 * * *"   # runs every 6 hours
 
 jobs:
   build:
@@ -17,18 +14,21 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Generate dashboard
+      - name: Generate MITRE dashboard
         run: python3 scripts/generate_mitre_dashboard.py
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: Commit SVG
+        uses: EndBug/add-and-commit@v9
         with:
-          name: mitre-dashboard
-          path: mitre_dashboard.svg
+          add: "mitre_dashboard.svg"
+          author_name: "mitre-bot"
+          author_email: "mitre-bot@users.noreply.github.com"
+          message: "Update MITRE dashboard"
+          push: true
