--- a/.github/workflows/mitre_dashboard.yml
+++ b/.github/workflows/mitre_dashboard.yml
@@ -3,7 +3,7 @@ name: Generate MITRE Dashboard
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"   # runs every 6 hours
+    - cron: "0 * * * *"  # run every hour
 
 jobs:
   build:
@@ -19,12 +19,12 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install svgwrite
 
       - name: Generate MITRE dashboard
         run: python3 scripts/generate_mitre_dashboard.py
 
-      - name: Commit SVG
+      - name: Commit updated SVG
         uses: EndBug/add-and-commit@v9
         with:
           add: "mitre_dashboard.svg"
@@ -32,3 +32,4 @@ jobs:
           author_email: "mitre-bot@users.noreply.github.com"
           message: "Update MITRE dashboard"
           push: true
+
