--- a/.github/workflows/mitre_dashboard.yml
+++ b/.github/workflows/mitre_dashboard.yml
@@ -1,8 +1,8 @@
-name: Update MITRE Dashboard
+name: Generate MITRE Dashboard
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
@@ -10,23 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install deps
-      run: pip install svgwrite
+      - run: pip install svgwrite
 
-    - name: Generate dashboard
-      run: python3 scripts/generate_mitre_dashboard.py
+      - run: python3 scripts/generate_mitre_dashboard.py
 
-    - name: Commit update
-      run: |
-        git config user.name "github-actions"
-        git config user.email "actions@github.com"
-        git add mitre_dashboard.svg
-        git commit -m "Update MITRE dashboard" || exit 0
-        git push
+      - uses: EndBug/add-and-commit@v9
+        with:
+          add: "mitre_dashboard.svg"
+          message: "Update dashboard"
+          push: true
