--- a/.github/workflows/generate_cyber_radar.yml
+++ b/.github/workflows/generate_cyber_radar.yml
@@ -1,12 +1,40 @@
-- name: Generate Cyber Radar
-  run: python3 scripts/generate_cyber_radar.py
+name: Generate Cyber Radar
 
-- name: Commit generated SVG
-  uses: EndBug/add-and-commit@v9
-  with:
-    add: "assets/cyber_radar_static.svg"  # <-- must match Python output
-    author_name: "mitre-bot"
-    author_email: "mitre-bot@users.noreply.github.com"
-    message: "Update cyber radar"
-    push: true
-    branch: main
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 */6 * * *"   # every 6 hours
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Generate Cyber Radar
+        run: python3 scripts/generate_cyber_radar.py
+
+      - name: List assets folder (debug)
+        run: ls -l assets/
+
+      - name: Commit generated SVG
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: "assets/cyber_radar_static.svg"
+          author_name: "mitre-bot"
+          author_email: "mitre-bot@users.noreply.github.com"
+          message: "Update cyber radar"
+          push: true
+          branch: main
